--- a/public/payment.html
+++ b/public/payment.html
@@ -72,7 +72,7 @@
                             <option value="pt">PT</option>
                         </select>
                     </div>
-                    <button class="theme-toggle" id="themeToggle" title="Toggle theme">
+                    <button class="theme-toggle" id="themeToggle" title="Toggle theme" type="button">
                         <svg class="theme-icon" id="themeIcon"><use href="#icon-theme"></use></svg>
                     </button>
                 </div>
