--- a/public/iban.html
+++ b/public/iban.html
@@ -232,6 +232,11 @@
             color: var(--text-primary);
         }
 
+        .requisite-value--multiline {
+            white-space: pre-wrap;
+            word-break: break-word;
+        }
+
         .btn-ghost {
             border: 1px solid var(--border-color);
             background: transparent;
