--- a/public/iban.html
+++ b/public/iban.html
@@ -28,22 +28,6 @@
             transition: transform 280ms ease, filter 280ms ease;
         }
 
-        .payment-header-section .header-icon-wrapper::after {
-            content: '';
-            position: absolute;
-            inset: -26px;
-            background: radial-gradient(circle at top, rgba(59, 130, 246, 0.18), transparent 65%);
-            opacity: 0;
-            transform: scale(0.85);
-            transition: opacity 360ms ease, transform 360ms ease;
-            pointer-events: none;
-        }
-
-        body.iban-ready .payment-header-section .header-icon-wrapper::after {
-            opacity: 1;
-            transform: scale(1);
-        }
-
         @keyframes fadeRise {
             0% { opacity: 0; transform: translateY(12px); }
             100% { opacity: 1; transform: translateY(0); }
@@ -131,6 +115,56 @@
             flex-direction: column;
             gap: 24px;
             width: 100%;
+        }
+
+        .iban-controls {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            background: rgba(15, 23, 42, 0.18);
+            border-radius: 18px;
+            padding: 16px;
+            border: 1px solid var(--border-color);
+        }
+
+        .iban-control-field {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        .iban-control-label {
+            font-size: 12px;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            color: var(--text-muted);
+        }
+
+        .iban-control-input {
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+            padding: 10px 14px;
+            background: rgba(15, 23, 42, 0.35);
+            color: var(--text-primary);
+            font-size: 15px;
+            transition: border-color 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .iban-control-input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.15);
+        }
+
+        .iban-control-hint {
+            font-size: 12px;
+            color: var(--text-muted);
+        }
+
+        .iban-control-actions {
+            display: flex;
+            justify-content: flex-end;
         }
 
         .iban-summary,
@@ -276,6 +310,12 @@
             .widget-card {
                 padding: 24px;
                 border-radius: 18px;
+            }
+            .iban-control-actions {
+                justify-content: stretch;
+            }
+            .iban-control-actions .btn {
+                width: 100%;
             }
             .requisite-item {
                 flex-direction: column;
