--- a/public/iban.html
+++ b/public/iban.html
@@ -177,6 +177,24 @@
             box-shadow: 0 10px 30px rgba(15, 23, 42, 0.12);
         }
 
+        .iban-message-block {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .iban-external-frame {
+            width: 100%;
+            min-height: 420px;
+            border: 1px solid rgba(148, 163, 184, 0.3);
+            border-radius: 14px;
+            background: rgba(15, 23, 42, 0.18);
+        }
+
+        .iban-open-form {
+            align-self: flex-start;
+        }
+
         .section-heading-row {
             display: flex;
             align-items: center;
