--- a/public/iban.html
+++ b/public/iban.html
@@ -167,6 +167,16 @@
             justify-content: flex-end;
         }
 
+        .iban-inline-hint {
+            font-size: 14px;
+            color: var(--text-muted);
+        }
+
+        .iban-inline-error {
+            font-size: 14px;
+            color: var(--error-color, #f87171);
+        }
+
         .iban-summary,
         .iban-requisites,
         .iban-status {
