--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="tr" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Payment Method - Choose Your Payment</title>
+    <title>Ödeme Yöntemi - Seçiminizi Yapın</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://telegram.org/js/telegram-web-app.js" defer></script>
@@ -13,13 +13,12 @@
     <link rel="stylesheet" href="styles.css?v=7.0">
     <link rel="stylesheet" href="index-styles.css?v=7.0">
 </head>
-<body>
+<body class="dark-theme-active">
     <!-- Preloader with Logo -->
     <div id="preloader" class="preloader">
         <div class="preloader-content">
             <div class="logo-container">
                 <div class="logo-image">
-                    <!-- Logo - используем изображение wallet234_green.png -->
                     <img src="wallet234_green.png" alt="Logo" class="logo-img" decoding="async">
                 </div>
             </div>
@@ -33,7 +32,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="icon-card" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"/><line x1="1" y1="10" x2="23" y2="10"/></symbol>
             <symbol id="icon-wallet" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"/><path d="M3 5v14a2 2 0 0 0 2 2h16v-5"/><path d="M18 12a2 2 0 0 0 0 4h4v-4Z"/></symbol>
-            <symbol id="icon-theme" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></symbol>
             <symbol id="icon-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></symbol>
             <symbol id="icon-apple" viewBox="0 0 24 24" fill="currentColor"><path d="M17.05 20.28c-.98.95-2.05.88-3.08.4-1.09-.5-2.08-.48-3.24 0-1.44.62-2.2.44-3.06-.4C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/></symbol>
             <symbol id="icon-google" viewBox="0 0 24 24" fill="currentColor"><path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/><path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/><path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/><path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/></symbol>
@@ -60,17 +58,10 @@
         </svg>
 
         <div class="container">
-            <!-- Language Selector & Theme Toggle -->
-            <div class="top-controls">
-                <button class="theme-toggle" id="themeToggle" title="Toggle theme" type="button">
-                    <svg class="theme-icon" id="themeIcon"><use href="#icon-theme"></use></svg>
-                </button>
-            </div>
-
             <!-- Header -->
             <div class="payment-method-header">
-                <h1 id="pageTitle" class="page-title">Choose Payment Method</h1>
-                <p id="pageSubtitle" class="page-subtitle">Select your preferred payment option</p>
+                <h1 id="pageTitle" class="page-title">Ödeme yöntemini seçin</h1>
+                <p id="pageSubtitle" class="page-subtitle">Tercih ettiğiniz seçeneği belirleyin</p>
             </div>
 
             <!-- Payment Methods -->
@@ -81,11 +72,11 @@
                         <div class="payment-method-icons">
                             <img src="moonpay.png" alt="MoonPay" class="payment-icon-image" loading="lazy" decoding="async" />
                         </div>
-                        <h2 id="cardPaymentTitle" class="payment-method-title">Card Payment</h2>
+                        <h2 id="cardPaymentTitle" class="payment-method-title">Kart ile ödeme</h2>
                         <p id="cardPaymentSubtitle" class="payment-method-subtitle">VISA / Mastercard / Apple Pay / Google Pay</p>
                     </div>
                     <button id="cardPaymentButton" class="payment-method-button" data-method="card">
-                        <span id="cardPaymentButtonText">Continue</span>
+                        <span id="cardPaymentButtonText">Devam et</span>
                         <svg class="button-arrow"><use href="#icon-arrow"></use></svg>
                     </button>
                 </div>
@@ -96,11 +87,11 @@
                         <div class="payment-method-icons">
                             <svg class="payment-icon iban-icon"><use href="#icon-iban"></use></svg>
                         </div>
-                        <h2 id="ibanPaymentTitle" class="payment-method-title">IBAN Transfer</h2>
-                        <p id="ibanPaymentSubtitle" class="payment-method-subtitle">Bank transfer via IBAN</p>
+                        <h2 id="ibanPaymentTitle" class="payment-method-title">IBAN havalesi</h2>
+                        <p id="ibanPaymentSubtitle" class="payment-method-subtitle">IBAN üzerinden banka transferi</p>
                     </div>
                     <button id="ibanPaymentButton" class="payment-method-button" data-method="iban">
-                        <span id="ibanPaymentButtonText">Continue</span>
+                        <span id="ibanPaymentButtonText">Devam et</span>
                         <svg class="button-arrow"><use href="#icon-arrow"></use></svg>
                     </button>
                 </div>
@@ -110,11 +101,11 @@
             <div class="security-badges">
                 <div class="security-badge">
                     <svg class="badge-icon"><use href="#icon-shield"></use></svg>
-                    <span id="securePaymentBadge">Secure Payment</span>
+                    <span id="securePaymentBadge">Güvenli ödeme</span>
                 </div>
                 <div class="security-badge">
                     <svg class="badge-icon"><use href="#icon-lock"></use></svg>
-                    <span id="sslEncryptedBadge">SSL Encrypted</span>
+                    <span id="sslEncryptedBadge">SSL ile şifrelenmiş</span>
                 </div>
             </div>
         </div>
