--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="dark-theme-active">
     <!-- Main Content -->
-    <div id="main-content" class="main-content is-ready">
+    <div id="main-content" class="main-content">
         <!-- SVG Icons -->
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="icon-card" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"/><line x1="1" y1="10" x2="23" y2="10"/></symbol>
@@ -58,7 +58,7 @@
                 <div class="payment-method-card" id="cardPaymentCard">
                     <div class="payment-method-header-section">
                         <div class="payment-method-icons">
-                            <img src="moonpay.png" alt="MoonPay" class="payment-icon-image" loading="lazy" decoding="async" width="220" height="90" />
+                            <img src="moonpay.png" alt="MoonPay" class="payment-icon-image" loading="lazy" decoding="async" />
                         </div>
                         <h2 id="cardPaymentTitle" class="payment-method-title">Kart ile ödeme</h2>
                         <p id="cardPaymentSubtitle" class="payment-method-subtitle">VISA / Mastercard / Apple Pay / Google Pay</p>
